--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header class="bg-white/60 sticky top-0 z-30 backdrop-blur-sm border-b border-slate-200">
     <div class="max-w-7xl mx-auto px-6 py-4 flex items-center justify-between">
       <a href="#" class="flex items-center gap-3">
-        <img src="https://drive.google.com/uc?export=view&id=1YBorRKQ_t7XPEDUBiQoIzbhlZc07Ojzl" alt="Entity Developers Logo" class="h-12 w-auto rounded-lg">
+        <img src="Screenshot_20251024-113249_Chrome.jpg" class="h-12 w-auto rounded-lg">
         <div>
           <div class="text-lg font-semibold">Entity Developers</div>
           <div class="text-xs text-slate-500">Driven by Vision. Defined by Service.</div>
@@ -210,3 +210,4 @@
   </script>
 </body>
 </html>
+
