--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="max-w-7xl mx-auto px-6 grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
         <div class="space-y-6">
           <h1 class="text-5xl md:text-6xl font-extrabold leading-tight">Driven by Vision. <span class="text-indigo-600">Defined by Service.</span></h1>
-          <p class="text-slate-600 max-w-xl">We take Embedded Systems, IoT projects and Prototyping from tech startups and students, delivering complete solutions on time. From concept to deployment, we bring technical excellence to every project.</p>
+          <p class="text-slate-600 max-w-xl">We take Embedded Systems design and Software, IoT projects and Prototyping for tech startups and students, delivering complete solutions on time. From concept to deployment, we bring technical excellence in every project.</p>
 
           <div class="flex gap-4">
             <a href="#contact" class="inline-flex items-center gap-2 px-5 py-3 rounded-md bg-indigo-600 text-white font-medium shadow hover:opacity-95">Start Your Project 🚀</a>
@@ -210,6 +210,7 @@
   </script>
 </body>
 </html>
+
 
 
 
